Fix crash when removing online jobs

Whenever more than one entry in the list where selected and the last
entry was selected first, the application crashed.

BUG: 379262
FIXED-IN: 5.0